@@ -1,0 +1,24 @@
+body {margin-left: 5%; margin-right: 5%;}
+
+H1{             background: white;
+                color: rgb(25%, 25%, 25%);
+                font-family: monospace;
+                font-size: xx-large;
+                text-align: center }
+
+H2{             background: white;
+                color: rgb(40%, 40%, 40%);
+                font-family: monospace;
+                font-size: x-large;
+                text-align: center }
+
+H3{             background: white;
+                color: rgb(40%, 40%, 40%);
+                font-family: monospace;
+                font-size: large }
+
+span.samp{font-family: monospace}
+span.command{font-family: monospace}
+span.option{font-family: monospace}
+span.file{font-family: monospace}
+span.env{font-family: monospace}
